@@ -2,21 +2,25 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>se.skltp.takdatahandler</groupId>
   <artifactId>tak-data-handler</artifactId>
   <version>3.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+
   <modules>
     <module>vagvalhandler</module>
     <module>behorighethandler</module>
     <module>common</module>
     <module>report</module>
   </modules>
+
   <scm>
     <connection>scm:git:https://github.com/skltp/takdatahandler.git</connection>
     <developerConnection>scm:git:https://github.com/skltp/takdatahandler.git</developerConnection>
     <url>https://github.com/skltp/takdatahandler.git</url>
   </scm>
+
   <distributionManagement>
     <repository>
       <id>release-nexus</id>
@@ -29,18 +33,27 @@
       <url>${snapshot-nexus-url}</url>
     </snapshotRepository>
   </distributionManagement>
+
   <properties>
-    <maven.compiler.release>17</maven.compiler.release>
-    <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
-    <takcache.version>2.2.0</takcache.version>
-    <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
+    <!-- Project -->
+    <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <surefire.plugin.version>2.22.2</surefire.plugin.version>
-    <junit.version>4.13.2</junit.version>
-    <mockito.version>4.0.0</mockito.version>
-    <hsacache.version>1.3.0</hsacache.version>
-    <sonar.plugin.version>3.5.0.1254</sonar.plugin.version>
+    <argLine/>
+
+    <!-- Plugins -->
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
+
+    <!-- Dependencies -->
+    <hsacache.version>1.4.0</hsacache.version>
+    <takcache.version>3.0.0</takcache.version>
+
+    <!-- Test dependencies -->
+    <log4j.version>2.25.4</log4j.version>
+    <jacoco.plugin.version>0.8.14</jacoco.plugin.version>
+    <junit.jupiter.version>5.10.2</junit.jupiter.version>
+    <mockito.version>5.21.0</mockito.version>
   </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -53,17 +66,20 @@
         <artifactId>takcache</artifactId>
         <version>${takcache.version}</version>
       </dependency>
+
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>2.0.16</version>
-        <scope>test</scope>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-bom</artifactId>
+        <version>${log4j.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -73,6 +89,34 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Log4j 2 implementation -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!-- Bridge SLF4J calls into Log4j 2 -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j2-impl</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
   <repositories>
     <repository>
       <snapshots>
@@ -82,11 +126,12 @@
       <url>https://nexus.drift.inera.se/repository/maven-public/</url>
     </repository>
   </repositories>
+
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>${failsafe.plugin.version}</version>
+        <version>${maven-surefire-plugin.version}</version>
         <executions>
           <execution>
             <goals>
@@ -95,13 +140,20 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${surefire.plugin.version}</version>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <id>test-coverage</id>
